Add gpu allocation support for deployments
